# mre-example-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: toolchain-arm-none-eabi.cmake
platform/: syscalls.c
src/: main.cpp
